[project]
name = "rebuilt-muzero"
version = "0.0.0"
description = "MuZero-style macro strategy coach for FRC 2026 REBUILT."
readme = "PLAN.md"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rebuilt_muzero*"]

